isri0001 20231056 update alex

--- a/Web.config
+++ b/Web.config
@@ -13,8 +13,8 @@
 	 Persist Security Info=False;  
 	 User ID=sa2;              
 		 Password=!@#$QWER;    
-		 Connection Timeout=30;" />-->
-    <!--<add name="DefaultConnection" providerName="system.Data.SqlClient"
+		 Connection Timeout=30;" />
+    <add name="DefaultConnection" providerName="system.Data.SqlClient"
 		
 	 connectionString="Server=Y230904NB50;     
 	 Database=ISR;      
@@ -26,7 +26,7 @@
 
 		<add name="DefaultConnection"
          providerName="system.Data.SqlClient"         
-			 connectionString="Server=DESKTOP-F01A1VP;  
+			 connectionString="Server=DESKTOP-023PVFE;  
          Database=ISR;         Persist Security Info=False;         
          User ID=sa2;                      Password=!@#$QWER;            Connection Timeout=30" />
 	 
